# AIsketcher

./: .gitignore  ARTWORK_LICENSE.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: README.md  WORKFLOWS.md
.github/workflows/: ci.yml  pages.yml  publish-pypi.yml
AIsketcher/: __init__.py  modelPipe.py
docs/: canonical-sample.md  changelog.md  getting-started.md  index.md
docs/assets/: aisketcher-social-preview.provenance.json  aisketcher-studio-guided-sample-ko.provenance.json  aisketcher-studio-heritage-fixed-seed-en.provenance.json
docs/assets/heritage-seed-study/: README.md  manifest.json  provenance.json
docs/assets/heritage-studio-fixed-seed-en/: README.md  manifest.json  provenance.json
docs/assets/heritage-studio-hero-hpo-en/: README.md  manifest.json  provenance.json
docs/assets/pocket-kingdom/: README.md  provenance.json
docs/assets/pocket-kingdom/variation/: manifest.json
docs/concepts/: design-lineage.md
docs/guides/: migration.md  privacy.md  seeds.md  troubleshooting.md
docs/javascripts/: sample-gallery.js
docs/ko/: quickstart.md
docs/overrides/: main.html
docs/reference/: configuration.md
docs/releases/: 0.2.0.md  0.2.1.md  0.3.0.md
docs/roadmap/: 2026-model-and-studio-refresh.md
docs/sdk/: explore-refine.md  export-replay.md  prepare.md  workflow.md
docs/studio/: models-cache.md  simple-advanced.md
docs/stylesheets/: extra.css
examples/: __init__.py
examples/studio_app/: __init__.py  app.py  i18n.py  runtime.py
src/: AIsketcher.py
src/aisketcher/: __init__.py  backends.py  cli.py  config.py  controls.py  errors.py  flux2_backend.py  manifest.py  modelPipe.py  model_registry.py  models.py  presets.py  prompt_normalization.py  studio.py  study.py
src/aisketcher/studio_app/: __init__.py  app.py  i18n.py  runtime.py  styles.css
src/aisketcher/studio_app/assets/pocket-kingdom/: ARTWORK_NOTICE.md  manifest.json
test/: util_test.py
tests/: test_cli.py  test_config.py  test_model_pipe.py
tests/app/: test_core_adapter.py  test_packaged_studio.py  test_studio_build.py  test_studio_defect_regressions.py  test_studio_runtime.py
tests/core/: test_diffusers_adapter.py  test_flux2_backend.py  test_flux2_preset.py  test_manifest.py  test_model_registry.py  test_models.py  test_prepare.py  test_presets_and_legacy.py  test_prompt_normalization.py  test_workflow.py
tests/docs/: scan_distribution.py  test_distribution_equivalence.py  test_docs_contract.py  test_release_policy.py  verify_distribution_equivalence.py  verify_staged_upload.py  wheel_smoke.py
tests/e2e/: test_studio_browser.py
